--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
     <section class="widget">
       <div class="container">
           <div class="row">
-              <div class="col-lg-2 col-md-6">
+              <div class="col-lg-2 col-6">
                   <div class="content">
                       <div class="image-wrapper">
                           <img src="assets/images/diarrhea.webp" alt="">
@@ -386,7 +386,7 @@
                       <h6>Digestive Issues</h6>
                   </div>
               </div>
-              <div class="col-lg-2 col-md-6">
+              <div class="col-lg-2 col-6">
                 <div class="content">
                     <div class="image-wrapper">
                         <img src="assets/images/immunity.webp" alt="">
@@ -394,7 +394,7 @@
                     <h6>Weakened Immune System</h6>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-6">
+              <div class="col-lg-2 col-6">
                 <div class="content">
                     <div class="image-wrapper">
                         <img src="assets/images/indigestion.webp" alt="">
@@ -402,7 +402,7 @@
                     <h6>Increased Inflammation</h6>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-6">
+              <div class="col-lg-2 col-6">
                 <div class="content">
                     <div class="image-wrapper">
                         <img src="assets/images/mood.webp" alt="">
@@ -410,7 +410,7 @@
                     <h6>Mood Disorders</h6>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-6">
+              <div class="col-lg-2 col-6">
                 <div class="content">
                     <div class="image-wrapper">
                         <img src="assets/images/fatigue.webp" alt="">
@@ -418,7 +418,7 @@
                     <h6>Chronic Fatigue</h6>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-6">
+              <div class="col-lg-2 col-6">
                 <div class="content">
                     <div class="image-wrapper">
                         <img src="assets/images/obesity.webp" alt="">
