--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link rel="icon" href="assets/images/favicon.ico" />
-  <link rel="preload" as="image" href="assets/images/banner.webp">
+  <link rel="prefetch" as="image" href="assets/images/banner.webp">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" as="style" >
@@ -37,7 +37,7 @@
     </a>
   </div>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="scrollspy">
+    <nav class="navbar navbar-expand-lg" id="scrollspy">
       <div class="container">
         <a class="navbar-brand" href="#"><img src="assets/images/logo.png" alt="" width="150"></a>
         <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
@@ -198,7 +198,7 @@
       </div>
     </section>
     <nav class="mob-menu-wrapper" id="navbar2">
-      <ul class="navbar-nav mob-menu flex-row mx-auto mt-3 mt-lg-0 align-items-center">
+      <ul class="navbar-nav mob-menu flex-row mx-auto mt-1 mt-lg-0 align-items-center">
         <li class="nav-item">
           <a class="nav-link active" href="#about">About Gut Health</a>
         </li>
@@ -806,8 +806,8 @@
   </main>
   <footer>
     <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-4 col-md-6">
+        <div class="row align-items-md-center">
+            <div class="col-lg-4 col-md-4">
                 <div class="image-wrapper">
                     <img src="assets/images/logo.png" alt="" class="img-fluid">
                 </div>
@@ -819,7 +819,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-2 col-md-6">
+            <div class="col-lg-2 col-md-4 col-6">
                 <div class="footer-wrapper">
                     <ul class="footer-list">
                         <li class="footer-link">
@@ -837,7 +837,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-2 col-md-6">
+            <div class="col-lg-2 col-md-4 col-6">
                 <div class="footer-wrapper">
                     <ul class="footer-list">
                       <li class="footer-link">
@@ -858,7 +858,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-12">
                 <div class="footer-wrapper">
                   <div class="form-wrapper mb-3">
                     <form class="form" action="#" method="post">
