banner new changes

--- a/index.html
+++ b/index.html
@@ -141,13 +141,25 @@
                 <div class="form-group my-2">
                   <select name="location" id="location" class="location" required>
                     <option value="Select Location" default>Select Location</option>
-                    <option value="Complete Blood Count (CBC)">Complete Blood Count (CBC)</option>
-                    <option value=" Liver Function Test (LFT)"> Liver Function Test (LFT)</option>
-                    <option  value="Gamma Glutamyl Transferase(GGT)">Gamma Glutamyl Transferase(GGT)</option>
-                    <option  value="Amylase-Serum">Amylase-Serum</option>
-                    <option  value="H Pylori Antibody">H Pylori Antibody</option>
-                    <option value="Tissue Transglutaminase Antibody - IgG">Tissue Transglutaminase Antibody - IgG</option>
-                    <option value="IgG (Total)">IgG (Total)</option>
+                    <option value="New Panvel">New Panvel</option>
+                    <option  value="Old Panvel">Old Panvel</option>
+                    <option value="Karanjade">Karanjade</option>
+                    <option  value="Khanda Colony">Khanda Colony</option>
+                    <option  value="Kamothe">Kamothe</option>
+                    <option  value="Kalamboli">Kalamboli</option>
+                    <option value="Taloja">Taloja</option>
+                    <option value="Kharghar"> Kharghar</option>
+                    <option value="Belapur">Belapur</option>
+                    <option value="Seawoods">Seawoods</option>
+                    <option value="Nerul">Nerul</option>
+                    <option value="Juinagar">Juinagar</option>
+                    <option value="Sandpada">Sandpada</option>
+                    <option value="Vashi">Vashi</option>
+                    <option value="Turbe">Turbe</option>
+                    <option value="Koparkhairne">Koparkhairne</option>
+                    <option value="Ghansoli">Ghansoli</option>
+                    <option value="Rabale">Rabale</option>
+                    <option value="Airoli">Airoli</option>
                   </select>
                   <span class="error"></span>
                 </div>
@@ -826,13 +838,25 @@
                   <div class="form-group my-2">
                     <select name="location" id="location" class="location" required>
                       <option value="Select Location" default>Select Location</option>
-                      <option value="Complete Blood Count (CBC)">Complete Blood Count (CBC)</option>
-                      <option value=" Liver Function Test (LFT)"> Liver Function Test (LFT)</option>
-                      <option  value="Gamma Glutamyl Transferase(GGT)">Gamma Glutamyl Transferase(GGT)</option>
-                      <option  value="Amylase-Serum">Amylase-Serum</option>
-                      <option  value="H Pylori Antibody">H Pylori Antibody</option>
-                      <option value="Tissue Transglutaminase Antibody - IgG">Tissue Transglutaminase Antibody - IgG</option>
-                      <option value="IgG (Total)">IgG (Total)</option>
+                      <option value="New Panvel">New Panvel</option>
+                      <option  value="Old Panvel">Old Panvel</option>
+                      <option value="Karanjade">Karanjade</option>
+                      <option  value="Khanda Colony">Khanda Colony</option>
+                      <option  value="Kamothe">Kamothe</option>
+                      <option  value="Kalamboli">Kalamboli</option>
+                      <option value="Taloja">Taloja</option>
+                      <option value="Kharghar"> Kharghar</option>
+                      <option value="Belapur">Belapur</option>
+                      <option value="Seawoods">Seawoods</option>
+                      <option value="Nerul">Nerul</option>
+                      <option value="Juinagar">Juinagar</option>
+                      <option value="Sandpada">Sandpada</option>
+                      <option value="Vashi">Vashi</option>
+                      <option value="Turbe">Turbe</option>
+                      <option value="Koparkhairne">Koparkhairne</option>
+                      <option value="Ghansoli">Ghansoli</option>
+                      <option value="Rabale">Rabale</option>
+                      <option value="Airoli">Airoli</option>
                     </select>
                     <span class="error"></span>
                   </div>
@@ -952,13 +976,25 @@
                       <div class="form-group my-2">
                         <select name="location" id="location" class="location" required>
                           <option value="Select Location" default>Select Location</option>
-                          <option value="Complete Blood Count (CBC)">Complete Blood Count (CBC)</option>
-                          <option value=" Liver Function Test (LFT)"> Liver Function Test (LFT)</option>
-                          <option  value="Gamma Glutamyl Transferase(GGT)">Gamma Glutamyl Transferase(GGT)</option>
-                          <option  value="Amylase-Serum">Amylase-Serum</option>
-                          <option  value="H Pylori Antibody">H Pylori Antibody</option>
-                          <option value="Tissue Transglutaminase Antibody - IgG">Tissue Transglutaminase Antibody - IgG</option>
-                          <option value="IgG (Total)">IgG (Total)</option>
+                          <option value="New Panvel">New Panvel</option>
+                          <option  value="Old Panvel">Old Panvel</option>
+                          <option value="Karanjade">Karanjade</option>
+                          <option  value="Khanda Colony">Khanda Colony</option>
+                          <option  value="Kamothe">Kamothe</option>
+                          <option  value="Kalamboli">Kalamboli</option>
+                          <option value="Taloja">Taloja</option>
+                          <option value="Kharghar"> Kharghar</option>
+                          <option value="Belapur">Belapur</option>
+                          <option value="Seawoods">Seawoods</option>
+                          <option value="Nerul">Nerul</option>
+                          <option value="Juinagar">Juinagar</option>
+                          <option value="Sandpada">Sandpada</option>
+                          <option value="Vashi">Vashi</option>
+                          <option value="Turbe">Turbe</option>
+                          <option value="Koparkhairne">Koparkhairne</option>
+                          <option value="Ghansoli">Ghansoli</option>
+                          <option value="Rabale">Rabale</option>
+                          <option value="Airoli">Airoli</option>
                         </select>
                         <span class="error"></span>
                       </div>
