banner issue fixed

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <section class="banner">
       <div class="container">
         <div class="row">
-            <div class="col-lg-8">
+            <div class="col-lg-5">
               <div class="content-1">
                 <h6>Gut Health Screening</h6>
             </div>
@@ -120,66 +120,68 @@
               </div>
             </div>
           </div>  
-          <div class="col-lg-4">
-            <div class="banner-image-wrapper">  
-              <div class="banner-image"></div>
-            </div>
-            <div class="form-wrapper">
-              <form class="form" action="#" method="post">
-                <div class="form-group my-2">
-                  <input type="text" name="username" id="name" class="name" placeholder="Full Name" required>
-                  <span class="error"></span>
-                </div>
-                <div class="form-group">
-                  <input type="email" name="emailAdress" id="email" class="email" placeholder="Email ID" required>
-                  <span class="error"></span>
-                </div>
-                <div class="form-group my-2">
-                  <input type="text" name="phone" id="phone" class="phone" placeholder="Mobile Number" required>
-                  <span class="error"></span>
-                </div>
-                <div class="form-group my-2">
-                  <select name="location" id="location" class="location" required>
-                    <option value="Select Location" default>Select Location</option>
-                    <option value="New Panvel">New Panvel</option>
-                    <option  value="Old Panvel">Old Panvel</option>
-                    <option value="Karanjade">Karanjade</option>
-                    <option  value="Khanda Colony">Khanda Colony</option>
-                    <option  value="Kamothe">Kamothe</option>
-                    <option  value="Kalamboli">Kalamboli</option>
-                    <option value="Taloja">Taloja</option>
-                    <option value="Kharghar"> Kharghar</option>
-                    <option value="Belapur">Belapur</option>
-                    <option value="Seawoods">Seawoods</option>
-                    <option value="Nerul">Nerul</option>
-                    <option value="Juinagar">Juinagar</option>
-                    <option value="Sandpada">Sandpada</option>
-                    <option value="Vashi">Vashi</option>
-                    <option value="Turbe">Turbe</option>
-                    <option value="Koparkhairne">Koparkhairne</option>
-                    <option value="Ghansoli">Ghansoli</option>
-                    <option value="Rabale">Rabale</option>
-                    <option value="Airoli">Airoli</option>
-                  </select>
-                  <span class="error"></span>
-                </div>
-                <div class="form-group my-2">
-                  <select name="tests" id="tests" class="tests" required>
-                    <option value="Select Test" default>Select Tests</option>
-                    <option value="Complete Blood Count (CBC)">Complete Blood Count (CBC)</option>
-                    <option value=" Liver Function Test (LFT)"> Liver Function Test (LFT)</option>
-                    <option  value="Gamma Glutamyl Transferase(GGT)">Gamma Glutamyl Transferase(GGT)</option>
-                    <option  value="Amylase-Serum">Amylase-Serum</option>
-                    <option  value="H Pylori Antibody">H Pylori Antibody</option>
-                    <option value="Tissue Transglutaminase Antibody - IgG">Tissue Transglutaminase Antibody - IgG</option>
-                    <option value="IgG (Total)">IgG (Total)</option>
-                  </select>
-                  <span class="error"></span>
-                </div>
-                <div class="CTA">
-                  <input type="submit" value="Signup Now" id="submit">
-                </div>
-              </form>
+          <div class="col-lg-7">
+            <div class="d-lg-flex">
+              <div class="banner-image-wrapper">  
+                <div class="banner-image"></div>
+              </div>
+              <div class="form-wrapper">
+                <form class="form" action="#" method="post">
+                  <div class="form-group my-2">
+                    <input type="text" name="username" id="name" class="name" placeholder="Full Name" required>
+                    <span class="error"></span>
+                  </div>
+                  <div class="form-group">
+                    <input type="email" name="emailAdress" id="email" class="email" placeholder="Email ID" required>
+                    <span class="error"></span>
+                  </div>
+                  <div class="form-group my-2">
+                    <input type="text" name="phone" id="phone" class="phone" placeholder="Mobile Number" required>
+                    <span class="error"></span>
+                  </div>
+                  <div class="form-group my-2">
+                    <select name="location" id="location" class="location" required>
+                      <option value="Select Location" default>Select Location</option>
+                      <option value="New Panvel">New Panvel</option>
+                      <option  value="Old Panvel">Old Panvel</option>
+                      <option value="Karanjade">Karanjade</option>
+                      <option  value="Khanda Colony">Khanda Colony</option>
+                      <option  value="Kamothe">Kamothe</option>
+                      <option  value="Kalamboli">Kalamboli</option>
+                      <option value="Taloja">Taloja</option>
+                      <option value="Kharghar"> Kharghar</option>
+                      <option value="Belapur">Belapur</option>
+                      <option value="Seawoods">Seawoods</option>
+                      <option value="Nerul">Nerul</option>
+                      <option value="Juinagar">Juinagar</option>
+                      <option value="Sandpada">Sandpada</option>
+                      <option value="Vashi">Vashi</option>
+                      <option value="Turbe">Turbe</option>
+                      <option value="Koparkhairne">Koparkhairne</option>
+                      <option value="Ghansoli">Ghansoli</option>
+                      <option value="Rabale">Rabale</option>
+                      <option value="Airoli">Airoli</option>
+                    </select>
+                    <span class="error"></span>
+                  </div>
+                  <div class="form-group my-2">
+                    <select name="tests" id="tests" class="tests" required>
+                      <option value="Select Test" default>Select Tests</option>
+                      <option value="Complete Blood Count (CBC)">Complete Blood Count (CBC)</option>
+                      <option value=" Liver Function Test (LFT)"> Liver Function Test (LFT)</option>
+                      <option  value="Gamma Glutamyl Transferase(GGT)">Gamma Glutamyl Transferase(GGT)</option>
+                      <option  value="Amylase-Serum">Amylase-Serum</option>
+                      <option  value="H Pylori Antibody">H Pylori Antibody</option>
+                      <option value="Tissue Transglutaminase Antibody - IgG">Tissue Transglutaminase Antibody - IgG</option>
+                      <option value="IgG (Total)">IgG (Total)</option>
+                    </select>
+                    <span class="error"></span>
+                  </div>
+                  <div class="CTA">
+                    <input type="submit" value="Signup Now" id="submit">
+                  </div>
+                </form>
+              </div>
             </div>
           </div>
         </div>
