package ui changes

--- a/index.html
+++ b/index.html
@@ -187,9 +187,35 @@
         </div>
       </div>
     </section>
-    <section class="banner2">
+    <section class="gut-health">
       <div class="container">
-        <div class="row">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-lg-7">
+            <div class="image-wrapper">
+            </div>
+          </div>
+          <div class="col-lg-5">
+            <div class="package-wrapper">
+              <div class="title">
+                <h6>Common <span>Symptoms</span> of an Unhealthy Gut</h6>
+              </div>
+              <ul class="ps-3">
+                <li><p>Complete Blood Count (CBC)</p></li>
+                 <li><p>Liver Function Test (LFT)</p></li>
+                 <li><p>Gamma Glutamyl Transferase(GGT)</p></li>
+                 <li><p>Amylase-Serum</p></li>
+                 <li><p>H Pylori Antibody</p></li>
+                 <li><p>Tissue Transglutaminase Antibody - IgG</p></li>
+                 <li><p>IgG (Total)</p></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="banner2 mb-lg-0 mb-4">
+      <div class="container">
+        <div class="row justify-content-center">
           <div class="col-lg-3 col-md-6">
             <div class="content-wrapper d-flex align-items-center my-2">
               <div class="image-wrapper">
@@ -212,7 +238,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-4 col-md-6">
             <div class="content-wrapper d-flex align-items-center my-2">
               <div class="image-wrapper">
                 <img src="assets/images/home.webp" alt="" loading="lazy">
@@ -223,41 +249,26 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-4 col-md-6">
             <div class="content-wrapper d-flex align-items-center my-2">
               <div class="image-wrapper">
                 <img src="assets/images/blood-test.webp" alt="" loading="lazy">
               </div>
               <div>
-                <h6>Tests Package</h6>
+                <h6>Tests Packages</h6>
                 <p>6 <a href="#packages"><i class="fa-solid fa-chevron-down"></i></a></p>
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </section>
-    <section class="gut-health">
-      <div class="container">
-        <div class="row justify-content-center align-items-center">
-          <div class="col-lg-7">
-            <div class="image-wrapper">
-            </div>
-          </div>
-          <div class="col-lg-5">
-            <div class="package-wrapper">
-              <div class="title">
-                <h6>Common <span>Symptoms</span> of an Unhealthy Gut</h6>
+          <div class="col-lg-4 col-md-6">
+            <div class="content-wrapper d-flex align-items-center my-2">
+              <div class="image-wrapper">
+                <img src="assets/images/tele.webp" alt="" loading="lazy">
               </div>
-              <ul class="ps-3">
-                <li><p>Complete Blood Count (CBC)</p></li>
-                 <li><p>Liver Function Test (LFT)</p></li>
-                 <li><p>Gamma Glutamyl Transferase(GGT)</p></li>
-                 <li><p>Amylase-Serum</p></li>
-                 <li><p>H Pylori Antibody</p></li>
-                 <li><p>Tissue Transglutaminase Antibody - IgG</p></li>
-                 <li><p>IgG (Total)</p></li>
-              </ul>
+              <div>
+                <h6>Free Tele-consultation</h6>
+                <p>With Doctors</p>
+              </div>
             </div>
           </div>
         </div>
@@ -527,9 +538,9 @@
                 <div class="col-lg-2 col-6">
                   <div class="content">
                       <div class="image-wrapper">
-                          <img src="assets/images/indigestion.webp" alt="" loading="lazy">
+                          <img src="assets/images/skin.webp" alt="" loading="lazy">
                       </div>
-                      <h6>Increased Inflammation</h6>
+                      <h6>Skin Issues</h6>
                   </div>
                 </div>
                 <div class="col-lg-2 col-6">
